# deezer-python-gql

./: .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  Makefile  README.md  cliff.toml  pyproject.toml  schema.graphql  schema.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: publish-to-pypi.yml  release-drafter.yml  release.yml  test.yml
deezer_python_gql/: __init__.py  base_client.py
queries/: favorites.graphql  fragments.graphql  get_album.graphql  get_artist.graphql  get_artist_mix.graphql  get_audiobook.graphql  get_audiobook_chapter.graphql  get_charts.graphql  get_favorite_albums.graphql  get_favorite_artists.graphql  get_favorite_audiobooks.graphql  get_favorite_playlists.graphql  get_favorite_podcasts.graphql  get_favorite_tracks.graphql  get_flow.graphql  get_flow_batch.graphql  get_flow_config_tracks.graphql  get_flow_configs.graphql  get_livestream.graphql  get_made_for_me.graphql  get_me.graphql  get_music_together_affinity.graphql  get_music_together_group.graphql  get_music_together_groups.graphql  get_personal_tracks.graphql  get_playlist.graphql  get_podcast.graphql  get_podcast_episode.graphql  get_podcast_episode_bookmarks.graphql  get_podcast_episodes_by_ids.graphql  get_recently_played.graphql  get_recommendations.graphql  get_similar_artists.graphql  get_similar_tracks.graphql  get_smart_tracklist.graphql  get_track.graphql  get_track_mix.graphql  get_user_charts.graphql  get_user_playlists.graphql  music_together.graphql  (+3 more)
scripts/: check_codegen_sync.sh  convert_schema.py  explore.py
tests/: __init__.py  test_client.py
tests/fixtures/: add_album_to_favorite.json  add_artist_to_favorite.json  add_audiobook_to_favorite.json  add_playlist_to_favorite.json  add_podcast_to_favorite.json  add_track_to_favorite.json  add_tracks_to_playlist.json  bookmark_podcast_episode.json  create_playlist.json  delete_playlist.json  get_album.json  get_artist.json  get_artist_mix.json  get_audiobook.json  get_audiobook_chapter.json  get_charts.json  get_favorite_albums.json  get_favorite_artists.json  get_favorite_audiobooks.json  get_favorite_playlists.json  get_favorite_podcasts.json  get_favorite_tracks.json  get_flow.json  get_flow_batch.json  get_flow_config_tracks.json  get_flow_configs.json  get_livestream.json  get_made_for_me.json  get_me.json  get_music_together_affinity.json  get_music_together_group.json  get_music_together_groups.json  get_personal_tracks.json  get_playlist.json  get_podcast.json  get_podcast_episode.json  get_podcast_episode_bookmarks.json  get_podcast_episodes_by_ids.json  get_recently_played.json  get_recommendations.json  (+24 more)
