[project]
name = "deezer-python-gql"
version = "0.0.0"
description = "Async typed Python client for Deezer's Pipe GraphQL API."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
  {name = "Julian Daberkow", email = "jdaberkow@users.noreply.github.com"},
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
  "codespell==2.4.1",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pre-commit-hooks==6.0.0",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "ruff==0.14.13",
]
dev = [
  "ariadne-codegen[subscriptions]",
]

[tool.setuptools]
include-package-data = true
packages = ["deezer_python_gql"]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
deezer_python_gql = ["py.typed"]

[tool.ariadne-codegen]
schema_path = "schema.graphql"
queries_path = "queries"
target_package_name = "generated"
target_package_path = "deezer_python_gql"
client_name = "DeezerGQLClient"
base_client_name = "DeezerBaseClient"
base_client_file_path = "deezer_python_gql/base_client.py"
async_client = true
include_all_inputs = false
include_all_enums = false
plugins = [
  "ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin",
]

[tool.codespell]
skip = "*.json,schema.graphql"

[tool.ruff]
fix = true
show-fixes = true
line-length = 100
target-version = "py312"
extend-exclude = ["deezer_python_gql/generated"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["INP001"]  # Standalone CLI scripts, not a package

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 25
max-returns = 15
max-statements = 50

[tool.ruff.lint]
ignore = [
  "ANN002", # Just annoying, not really useful
  "ANN003", # Just annoying, not really useful
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D107", # __init__ docstrings on simple exception classes
  "D417", # False positives in some occasions
  "EM101", # Just annoying, not really useful
  "EM102", # Just annoying, not really useful
  "FIX002", # Just annoying, not really useful
  "PLR2004", # Just annoying, not really useful
  "PD011", # Just annoying, not really useful
  "S101", # assert is often used to satisfy type checking
  "TD002", # Just annoying, not really useful
  "TD003", # Just annoying, not really useful
  "TD004", # Just annoying, not really useful
  "TRY003", # Just annoying, not really useful
  "COM812", # Conflicts with the Ruff formatter
  "ISC001", # Conflicts with the Ruff formatter
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["deezer_python_gql"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.mypy]
platform = "linux"
python_version = "3.12"
follow_imports = "normal"
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
  "ignore-without-code",
  "redundant-self",
  "truthy-iterable",
]
extra_checks = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
packages = [
  "tests",
  "deezer_python_gql",
  "scripts",
]
show_error_codes = true
strict_equality = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov deezer_python_gql"
asyncio_mode = "auto"
